# PIAIC_QI_Projects

./: README.md
Project8_BMI_Calculator/: BMI_CALCULATOR.py
Project9CreateANewWebsite/: pyproject.toml
Project9CreateANewWebsite/src/project9createanewwebsite/: app.py  main.py
