[project]
name = "project9createanewwebsite"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "zsabro", email = "67281041+zsabro@users.noreply.github.com" }
]
requires-python = ">=3.13"
dependencies = [
    "matplotlib>=3.10.0",
    "numpy>=2.2.3",
    "pandas>=2.2.3",
    "streamlit>=1.42.0",
]

[project.scripts]
project9createanewwebsite = "project9createanewwebsite:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
